# webviz

./: .gitignore  README.md  dot.gv  graph.html  name.html  out.html  pyproject.toml  scrapy.cfg  setup.sh  starturl httpsenwikipediaorgwikiFunctor branchingfactor 4.html  starturl httpsenwikipediaorgwikiFunctor branchingfactor 4.nx  temp.py  test-cache.html  test-cache.nx
development-notes/: notes.md
src/scrape/: scraper.py
webvis/: items.py  pipelines.py  process.py  settings.py
webvis/spiders/: test_wikipedia.py  wikipedia.py
webvis/utils/: filepath_utils.py  name_generator.py  network.py  network_exporter.py  path_filter.py  path_sampler.py  wikipedia_parser.py
webvis/utils/crawling/: wikipedia_path_filter.py
webvis/utils/network/: clusterizer.py  pipeline.py
