[tool.poetry]
name = "webviz"
version = "0.1.0"
description = ""
authors = ["Alexander Van de Kleut <54694031+avandekleut@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
