[tool.poetry]
name = "webviz"
version = "0.1.0"
description = ""
authors = ["Alexander Van de Kleut <54694031+avandekleut@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.8.0"
pytest = "^7.2.2"
pandas = "^1.5.3"
beautifulsoup4 = "^4.11.2"
pyvis = "0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
